changed background color to red

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<body style="background-color:powderblue;">
+<body style="background-color:red;">
 
 <h1>Docker image is running fine...</h1>
 <h2>Version: v1</h2>
