Changed color to yellow

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
-<body style="background-color:red;">
+<body style="background-color:yellow;">
 
 <h1>Docker image is running fine...</h1>
-<h2>Version: v1</h2>
+<h2>Version: v2</h2>
 </body>
 </html>
