--- a/index.html
+++ b/index.html
@@ -1,8 +1,19 @@
 <!DOCTYPE html>
 <html>
-<body style="background-color:yellow;">
+<head>
+  <title>My Spinnaker page</title>
+</head>
 
-<h1>Docker image is running fine...</h1>
-<h2>Version: v2</h2>
+<body style="background-color: #adf0ff;">
+
+<h1 style="text-align: center">Deployment Environment</h1>
+
+<p style="text-align: center;font-size: 24px;">Welcome to my spinnaker testing page!</p>
+
+<p style="text-align: center;font-size: 20px;">There should be more here, but I don't know
+what yet.</p>
+
+<address style="text-align: center;">Made 5 January 2020; by myself.</address>
+
 </body>
 </html>
