--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <h1 style="text-align: center">Deployment Environment</h1>
 
-<p style="text-align: center;font-size: 24px;">Welcome to my spinnaker testing page!</p>
+<p style="text-align: center;font-size: 24px;">Welcome to new version of my spinnaker testing page!</p>
 
 <p style="text-align: center;font-size: 20px;">There should be more here, but I don't know
 what yet.</p>
