--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>My Spinnaker page</title>
 </head>
 
-<body style="background-color: #adf0ff;">
+<body style="background-color: red;">
 
 <h1 style="text-align: center">Deployment Environment</h1>
 
