--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <title>My Spinnaker page</title>
 </head>
 
-<body style="background-color: lightgreen;">
+<body style="background-color: lightblue;">
 
-<h1 style="text-align: center">Green Deployment Environment</h1>
+<h1 style="text-align: center">Blue Deployment Environment</h1>
 
-<p style="text-align: center;font-size: 24px;">Welcome to new version of my green spinnaker testing page!</p>
+<p style="text-align: center;font-size: 24px;">Welcome to new version of my blue spinnaker testing page!</p>
 
 <p style="text-align: center;font-size: 20px;">There should be more here, but I don't know
 what yet.</p>
